2004-03-12  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (libcidn-inhibit-o): Define.  We need no archive.

2004-03-08  Simon Josefsson  <jas@extundo.com>

	* toutf8.c: Update to latest libidn version.

2004-03-08  Ulrich Drepper  <drepper@redhat.com>

	* stringprep.h: Don't include idn-int.h in glibc.
	* idn-int.h: Removed.

2004-03-07  Ulrich Drepper  <drepper@redhat.com>

	* idn-stub.c: Include <gnu/lib-names.h>.  Use LIBCIDN_SO for dlopen.
	* shlib-versions: New file.
	* toutf8.c: Include <sys/param.h>.

2004-03-07  Simon Josefsson  <jas@extundo.com>

	* Banner: New file.
	* Makefile: New file.
	* Version: New file.
	* configure: New file.
	* idn-stub.c: New file.
	* gunibreak.h: New file.  Copied from Libidn.
	* gunicomp.h: New file.  Copied from Libidn.
	* gunidecomp.h: New file.  Copied from Libidn.
	* idna.h: New file.  Copied from Libidn.
	* idna.c: New file.  Copied from Libidn.
	* nfkc.c: New file.  Copied from Libidn.
	* profiles.c: New file.  Copied from Libidn.
	* punycode.c: New file.  Copied from Libidn.
	* punycode.h: New file.  Copied from Libidn.
	* rfc3454.c: New file.  Copied from Libidn.
	* stringprep.c: New file.  Copied from Libidn.
	* stringprep.h: New file.  Copied from Libidn.
	* toutf8.c: New file.  Copied from Libidn.  Modified for use in glibc.