@@ -1,5 +1,6 @@
 libcidn {
   GLIBC_PRIVATE {
     idna_to_ascii_lz;
+    idna_to_unicode_lzlz;
   }
 }
